# Shoroot-backend

./: .env  Cargo.toml
migrations/: 20250515120545_create_users_table.sql  20250522171110_create_bets_table.sql  20250522175348_drop_bets_off.sql  20250522180738_create_events_table.sql
src/: config.rs  db.rs  main.rs
src/auth/: handler.rs  jwt.rs  mod.rs
src/bets/: handler.rs
src/models/: user.rs
src/users/: handler.rs
