[package]
name = "betting_api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
argon2 = "0.5"
utoipa = { version = "3", features = ["actix_extras", "uuid"] }
utoipa-swagger-ui = { version = "3", features = ["actix-web"] }